# hdl_global_localization

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
config/: bbs_config.yaml  config.json  config_base.json  config_bbs.json  fpfh_config.yaml  general_config.yaml  ransac_config.yaml  teaser_config.yaml  test.rviz
docker/melodic/: Dockerfile
docker/melodic_llvm/: Dockerfile
docker/noetic/: Dockerfile
docker/noetic_llvm/: Dockerfile
include/aurrigo_global_localization/: global_localization_results.hpp
include/aurrigo_global_localization/bbs/: bbs_localization.hpp  occupancy_gridmap.hpp
include/aurrigo_global_localization/engines/: global_localization_bbs.hpp  global_localization_engine.hpp  global_localization_fpfh_ransac.hpp  global_localization_fpfh_teaser.hpp
include/aurrigo_global_localization/ransac/: matching_cost_evaluater.hpp  matching_cost_evaluater_flann.hpp  matching_cost_evaluater_voxels.hpp  ransac_pose_estimation.hpp  voxelset.hpp
include/hdl_global_localization/: global_localization_results.hpp
include/hdl_global_localization/bbs/: bbs_localization.hpp  occupancy_gridmap.hpp
include/hdl_global_localization/engines/: global_localization_bbs.hpp  global_localization_fpfh_ransac.hpp  global_localization_fpfh_teaser.hpp
include/hdl_global_localization/ransac/: ransac_pose_estimation.hpp  voxelset.hpp
include/hdl_global_localization/util/: config.hpp  convert_to_string.hpp
launch/: aurrigo_global_localization.launch  hdl_global_localization.launch
src/: aurrigo_global_localization_node.cpp  aurrigo_global_localization_test.cpp  bbs_test.cpp  hdl_global_localization_node.cpp  hdl_global_localization_node_ros2.cpp  hdl_global_localization_test.cpp  hdl_global_localization_test_ros2.cpp
src/aurrigo_global_localization/bbs/: bbs_localization.cpp
src/aurrigo_global_localization/engines/: global_localization_bbs.cpp  global_localization_fpfh_ransac.cpp  global_localization_fpfh_teaser.cpp
src/aurrigo_global_localization/ransac/: ransac_pose_estimation.cpp  voxelset.cpp
src/hdl_global_localization/bbs/: bbs_localization.cpp
src/hdl_global_localization/engines/: global_localization_bbs.cpp  global_localization_fpfh_ransac.cpp  global_localization_fpfh_teaser.cpp
src/hdl_global_localization/ransac/: ransac_pose_estimation.cpp
src/hdl_global_localization/util/: config.cpp
srv/: QueryGlobalLocalization.srv
